# sambanova-plugin-cc

./: .env  .gitignore  README.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
plugins/samba-claude/agent_shims/: pyproject.toml
plugins/samba-claude/agent_shims/src/agent_shims/: environment.py
plugins/samba-claude/agent_shims/src/agent_shims/cn/: README.md  runner.py
plugins/samba-claude/agent_shims/src/agent_shims/model_parameters/: __init__.py  parameters.db
plugins/samba-claude/agent_shims/src/agent_shims/opencode/: README.md  opencode.json.jinja  runner.py
plugins/samba-plugin/: .gitignore  .mcp.json
plugins/samba-plugin/agent_shims/: pyproject.toml
plugins/samba-plugin/agent_shims/src/agent_shims/: environment.py
plugins/samba-plugin/agent_shims/src/agent_shims/model_parameters/: __init__.py  parameters.db
plugins/samba-plugin/agent_shims/src/agent_shims/opencode/: opencode.json.jinja  runner.py
plugins/samba-plugin/agent_shims/src/agent_shims/opencode/rules/: 00-coding-guidelines.md  01-progress-files.md
plugins/samba-plugin/agent_shims/src/agent_shims/opencode/rules/tasks/: code-review.md  exploration.md
skills/code/: SKILL.md
skills/list-models/: SKILL.md
skills/model-info/: SKILL.md
skills/reset-model-db/: SKILL.md
skills/setup/: SKILL.md
tests/: conftest.py  pytest.ini  requirements.txt  test_code_parsers.py  test_code_runner.py  test_environment.py  test_live.py  test_manifests.py  test_mcp_server.py  test_model_db.py  test_model_info.py  test_opencode_config.py  test_skills.py
(+51 files in other folders)
