[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shims"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.jinja", "*.db"]
