[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-shims"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anyio==4.13.0",
    "jinja2==3.1.6",
    "mcp[cli]==1.27.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.jinja", "*.db", "*.md"]
